@@ -1,13 +1,13 @@
 DEFINED_PHASES=configure install postinst prepare setup
-DEPEND=dev-libs/uthash sys-libs/libcap net-libs/librsync sys-libs/ncurses sys-libs/zlib acl? ( sys-apps/acl ) afs? ( net-fs/openafs ) nls? ( sys-devel/gettext ) ssl? ( dev-libs/openssl ) tcpd? ( sys-apps/tcp-wrappers ) xattr? ( sys-apps/attr ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
+DEPEND=dev-libs/uthash sys-libs/libcap net-libs/librsync sys-libs/ncurses sys-libs/zlib acl? ( sys-apps/acl ) afs? ( net-fs/openafs ) nls? ( sys-devel/gettext ) ssl? ( dev-libs/openssl:0 ) tcpd? ( sys-apps/tcp-wrappers ) xattr? ( sys-apps/attr ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
 DESCRIPTION=Network backup and restore client and server for Unix and Windows
 EAPI=5
 HOMEPAGE=http://burp.grke.org/
 IUSE=acl afs ipv6 nls ssl tcpd xattr
 KEYWORDS=~amd64
 LICENSE=AGPL-3
-RDEPEND=dev-libs/uthash sys-libs/libcap net-libs/librsync sys-libs/ncurses sys-libs/zlib acl? ( sys-apps/acl ) afs? ( net-fs/openafs ) nls? ( sys-devel/gettext ) ssl? ( dev-libs/openssl ) tcpd? ( sys-apps/tcp-wrappers ) xattr? ( sys-apps/attr ) virtual/logger
+RDEPEND=dev-libs/uthash sys-libs/libcap net-libs/librsync sys-libs/ncurses sys-libs/zlib acl? ( sys-apps/acl ) afs? ( net-fs/openafs ) nls? ( sys-devel/gettext ) ssl? ( dev-libs/openssl:0 ) tcpd? ( sys-apps/tcp-wrappers ) xattr? ( sys-apps/attr ) virtual/logger
 SLOT=0
 SRC_URI=mirror://sourceforge/burp/burp-1.3.48.tar.bz2
 _eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	eutils	9fb270e417e0e83d64ca52586c4a79de	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4	user	f54e098dd38ba1c0847a13e685b87747
-_md5_=f5bf4f7eadf3fe3ca01684db9424c0c5
+_md5_=47c0209f5ae200fdee8cb8ce4fa4a8c2
