@@ -1,6 +1,13 @@
 # ChangeLog for app-backup/burp
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-backup/burp/ChangeLog,v 1.2 2014/12/01 16:31:34 aidecoe Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-backup/burp/ChangeLog,v 1.3 2015/04/08 19:13:54 aidecoe Exp $
+
+  08 Apr 2015; Amadeusz Żołnowski <aidecoe@gentoo.org> burp-1.3.8.ebuild,
+  burp-1.3.48.ebuild, burp-1.4.26.ebuild:
+  Don't create /etc/burp/CA directory because burp omits generating CA
+  certificates if the directory already exists.
+
+  Fix repoman warning about slots for openssl being not specified.
 
 *burp-1.4.26 (01 Dec 2014)
 *burp-1.3.48 (01 Dec 2014)
